--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -131,7 +131,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="180dp"
                         android:layout_marginBottom="8dp"
-                        android:background="#fffff"
+                        android:background="#ffffff"
                         android:contentDescription="Air Terjun Sedudo"
                         android:scaleType="centerCrop"
                         android:src="@drawable/wisata_air_terjun_sedudo" />
@@ -198,7 +198,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="180dp"
                         android:layout_marginBottom="8dp"
-                        android:background="#fffff"
+                        android:background="#ffffff"
                         android:contentDescription="Roro Kuning dan Situs Jendral Sudirman"
                         android:scaleType="centerCrop"
                         android:src="@drawable/wisata_roro_kuning" />
@@ -265,7 +265,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="180dp"
                         android:layout_marginBottom="8dp"
-                        android:background="#fffff"
+                        android:background="#ffffff"
                         android:contentDescription="Goa Margotresno"
                         android:scaleType="centerCrop"
                         android:src="@drawable/wisata_goa_margotresno" />
@@ -332,7 +332,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="180dp"
                         android:layout_marginBottom="8dp"
-                        android:background="#fffff"
+                        android:background="#ffffff"
                         android:contentDescription="Kolam Renang Sri Tanjung"
                         android:scaleType="centerCrop"
                         android:src="@drawable/wisata_sritanjung" />
@@ -399,7 +399,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="180dp"
                         android:layout_marginBottom="8dp"
-                        android:background="#fffff"
+                        android:background="#ffffff"
                         android:contentDescription="Taman Rekreasi Anjuk Ladang"
                         android:scaleType="centerCrop"
                         android:src="@drawable/wisata_tral" />
